# TradeFlow-AgentOS

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
data/: synthetic_seed_plan.md  tradeflow_seed.csv
evals/: EVALUATION_PLAN.md  approval_workflow_cases.json  golden_cases.json  llm_provider_smoke_cases.json  security_policy_cases.json  sprint_002_tool_eval_cases.json  sprint_003_workflow_eval_cases.json  sprint_005_planner_golden_cases.json  sprint_006_skill_trigger_cases.json
scripts/: build_agentops_dashboard.py  build_agentops_evidence_index.py  build_release_evidence_pack.py  check_capstone_readiness.py  check_submission_package.py  generate_synthetic_data.py  list_domain_skills.py  run_agent_quality_gate.py  run_approval_workflow_evals.py  run_guardrail_approval_evals.py  run_guardrail_enforcement_evals.py  run_llm_provider_smoke.py  run_order_risk_workflow.py  run_planner.py  run_planner_evals.py  run_security_evals.py  run_skill_evals.py  run_tool_evals.py  run_tradeflow_agent_demo.py  run_tradeflow_agent_demo_ui.py  run_workflow_evals.py  summarize_quality_history.py
skills/: SKILL_CATALOG.md
specs/: AGENT_CONTRACTS.md  BDD_SCENARIOS.md  DATA_MODEL.md  EVALUATION.md  EVENTS.md  GUARDRAILS.md  PRD.md
tests/: test_event_contracts.py  test_finance_decision_rules.py  test_order_workflow.py  test_sprint_002_tool_layer.py  test_sprint_003_order_risk_workflow.py  test_sprint_004_llm_planner.py  test_sprint_005_planner_evals_audit.py  test_sprint_006_domain_skills_runbooks.py  test_sprint_008_provider_smoke_evals.py  (+9 more)
(+88 files in other folders)
