[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradeflow-agentos"
version = "0.1.0"
description = "Synthetic multi-agent trading business control tower foundation."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
